--- a/index.html
+++ b/index.html
@@ -827,10 +827,10 @@
                 <div class="feature-box">
                     <h3>Capacitación</h3>
                     <ul>
-                        <li>Sesiones presenciales</li>
-                        <li>Manuales de usuario</li>
-                        <li>Videos tutoriales</li>
-                        <li>Guías de referencia</li>
+                        <li>Capacitación presencial personalizada</li>
+                        <li>Manuales de usuario detallados</li>
+                        <li>Soporte directo durante la implementación</li>
+                        <li>Guías de referencia rápida</li>
                     </ul>
                 </div>
 
@@ -868,7 +868,7 @@
                     <p>EcosanPlagas</p>
                     <p>RUT: _________________</p>
                     <div class="signature-line"></div>
-                    <small>Firma y Fecha</small>
+                    <small>Firma</small>
                 </div>
 
                 <div class="signature-block">
@@ -877,12 +877,12 @@
                     <p>Desarrollador de Software</p>
                     <p>RUT: _________________</p>
                     <div class="signature-line"></div>
-                    <small>Firma y Fecha</small>
+                    <small>Firma</small>
                 </div>
             </div>
 
             <div style="margin-top: 40px; text-align: center;">
-                <p>Santiago, ___________________</p>
+                <p>San Vicente, ___________________</p>
             </div>
         </div>
     </div>
