--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             line-height: 1.7;
             color: var(--text-color);
             background-color: var(--secondary-color);
+            font-size: 13px;
         }
 
         .cover {
@@ -62,7 +63,7 @@
         }
 
         .cover h2 {
-            font-size: 2.2em;
+            font-size: 1.3em; /* Antes: 1.5em */
             margin-bottom: 20px;
             font-weight: 500;
         }
@@ -82,7 +83,7 @@
 
         .section {
             margin-bottom: 60px;
-            padding: 50px;
+            padding: 20px; /* Antes: 30px */
             background: white;
             border-radius: 16px;
             box-shadow: var(--shadow-md);
@@ -96,7 +97,7 @@
 
         .section h2 {
             color: var(--primary-color);
-            font-size: 2em;
+            font-size: 1.8em; /* Antes: 2em */
             margin-bottom: 40px;
             position: relative;
             padding-bottom: 15px;
@@ -115,7 +116,7 @@
 
         .section h3 {
             color: var(--primary-dark);
-            font-size: 1.5em;
+            font-size: 1.3em; /* Antes: 1.5em */
             margin: 30px 0 20px;
             font-weight: 600;
         }
@@ -123,13 +124,13 @@
         .grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
+            gap: 20px; /* Antes: 30px */
             margin: 30px 0;
         }
 
         .feature-box {
             background: var(--light-gray);
-            padding: 35px;
+            padding: 20px; /* Antes: 35px */
             border-radius: 16px;
             transition: all 0.3s ease;
             border: 1px solid var(--border-color);
@@ -409,7 +410,7 @@
                         <li>Verificación de servicios</li>
                         <li>Control financiero exclusivo</li>
                     </ul>
-                    <p class="price">Valor: 15,680,000 CLP</p>
+                    <p class="price">Valor: $ CLP</p>
                 </div>
 
                 <div class="feature-box">
@@ -421,7 +422,7 @@
                         <li>Formularios digitales</li>
                         <li>Registro de servicios</li>
                     </ul>
-                    <p class="price">Valor: 7,840,000 CLP</p>
+                    <p class="price">Valor: $ CLP</p>
                 </div>
 
                 <div class="feature-box">
@@ -433,7 +434,7 @@
                         <li>Reportes y estadísticas</li>
                         <li>Gestión de certificados</li>
                     </ul>
-                    <p class="price">Valor: 7,840,000 CLP</p>
+                    <p class="price">Valor: $ CLP</p>
                 </div>
             </div>
         </div>
@@ -677,43 +678,43 @@
                     <tr>
                         <td>Portal Oficina</td>
                         <td>448</td>
-                        <td>15,680,000</td>
+                        <td>$</td>
                         <td>Sistema completo de gestión administrativa</td>
                     </tr>
                     <tr>
                         <td>Portal Técnico</td>
                         <td>224</td>
-                        <td>7,840,000</td>
+                        <td>$</td>
                         <td>Sistema operativo para técnicos</td>
                     </tr>
                     <tr>
                         <td>Portal Cliente</td>
                         <td>224</td>
-                        <td>7,840,000</td>
+                        <td>$</td>
                         <td>Plataforma de autogestión para clientes</td>
                     </tr>
                     <tr>
                         <td>Gestión de Proyecto</td>
                         <td>-</td>
-                        <td><span class="precio-tachado">2,400,000</span> <span class="precio-nuevo">0</span></td>
+                        <td><span class="precio-tachado">$</span> <span class="precio-nuevo">0</span></td>
                         <td>Coordinación y seguimiento del proyecto</td>
                     </tr>
                     <tr>
                         <td>Testing y QA</td>
                         <td>-</td>
-                        <td><span class="precio-tachado">2,400,000</span> <span class="precio-nuevo">0</span></td>
+                        <td><span class="precio-tachado">$</span> <span class="precio-nuevo">0</span></td>
                         <td>Control de calidad y pruebas</td>
                     </tr>
                     <tr>
                         <td>Migración de Datos</td>
                         <td>-</td>
-                        <td><span class="precio-tachado">1,200,000</span> <span class="precio-nuevo">0</span></td>
+                        <td><span class="precio-tachado">$</span> <span class="precio-nuevo">0</span></td>
                         <td>Migración de datos iniciales y configuración</td>
                     </tr>
                     <tr>
                         <th>Total Final</th>
                         <th>896</th>
-                        <th>31,360,000</th>
+                        <th>$</th>
                         <th>Sistema completo con servicios bonificados</th>
                     </tr>
                 </table>
@@ -724,8 +725,8 @@
                 <div class="feature-box">
                     <h3>Opción 1: Dos Pagos</h3>
                     <ul>
-                        <li>50% inicial: 15,680,000 CLP</li>
-                        <li>50% a la entrega: 15,680,000 CLP</li>
+                        <li>50% inicial: $ CLP</li>
+                        <li>50% a la entrega: $ CLP</li>
                     </ul>
                     <small>Ideal para pagos simplificados</small>
                 </div>
@@ -733,10 +734,10 @@
                 <div class="feature-box">
                     <h3>Opción 2: Pagos Mensuales</h3>
                     <ul>
-                        <li>20% inicial: 6,272,000 CLP</li>
-                        <li>20% mes 2: 6,272,000 CLP</li>
-                        <li>20% mes 3: 6,272,000 CLP</li>
-                        <li>40% final: 12,544,000 CLP</li>
+                        <li>20% inicial: $ CLP</li>
+                        <li>20% mes 2: $ CLP</li>
+                        <li>20% mes 3: $ CLP</li>
+                        <li>40% final: $ CLP</li>
                     </ul>
                     <small>Facilita la distribución del presupuesto</small>
                 </div>
@@ -744,9 +745,9 @@
                 <div class="feature-box">
                     <h3>Opción 3: Por Portal</h3>
                     <ul>
-                        <li>Portal Oficina: 15,680,000 CLP</li>
-                        <li>Portal Técnico: 7,840,000 CLP</li>
-                        <li>Portal Cliente: 7,840,000 CLP</li>
+                        <li>Portal Oficina: $ CLP</li>
+                        <li>Portal Técnico: $ CLP</li>
+                        <li>Portal Cliente: $ CLP</li>
                     </ul>
                     <small>Permite validar por etapas</small>
                 </div>
