--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         <li>Verificación de servicios</li>
                         <li>Control financiero exclusivo</li>
                     </ul>
-                    <p class="price">Valor: $ CLP</p>
+                    <p class="price">Valor: 20,000,000 CLP</p>
                 </div>
 
                 <div class="feature-box">
@@ -422,7 +422,7 @@
                         <li>Formularios digitales</li>
                         <li>Registro de servicios</li>
                     </ul>
-                    <p class="price">Valor: $ CLP</p>
+                    <p class="price">Valor: 10,000,000 CLP</p>
                 </div>
 
                 <div class="feature-box">
@@ -434,7 +434,7 @@
                         <li>Reportes y estadísticas</li>
                         <li>Gestión de certificados</li>
                     </ul>
-                    <p class="price">Valor: $ CLP</p>
+                    <p class="price">Valor: 10,000,000 CLP</p>
                 </div>
             </div>
         </div>
@@ -713,19 +713,19 @@
                     <tr>
                         <td>Portal Oficina</td>
                         <td>560</td>
-                        <td>$</td>
+                        <td>20,000,000</td>
                         <td>Sistema completo de gestión administrativa</td>
                     </tr>
                     <tr>
                         <td>Portal Técnico</td>
                         <td>280</td>
-                        <td>$</td>
+                        <td>10,000,000</td>
                         <td>Sistema operativo para técnicos</td>
                     </tr>
                     <tr>
                         <td>Portal Cliente</td>
                         <td>280</td>
-                        <td>$</td>
+                        <td>10,000,000</td>
                         <td>Plataforma de autogestión para clientes</td>
                     </tr>
                     <tr>
@@ -749,7 +749,7 @@
                     <tr>
                         <th>Total Final</th>
                         <th>1,120</th>
-                        <th>$</th>
+                        <th>40,000,000</th>
                         <th>Sistema completo con servicios bonificados</th>
                     </tr>
                 </table>
@@ -760,8 +760,8 @@
                 <div class="feature-box">
                     <h3>Opción 1: Dos Pagos</h3>
                     <ul>
-                        <li>50% inicial: $ CLP</li>
-                        <li>50% a la entrega: $ CLP</li>
+                        <li>50% inicial: 20,000,000 CLP</li>
+                        <li>50% a la entrega: 20,000,000 CLP</li>
                     </ul>
                     <small>Ideal para pagos simplificados</small>
                 </div>
@@ -769,11 +769,11 @@
                 <div class="feature-box">
                     <h3>Opción 2: Pagos Mensuales</h3>
                     <ul>
-                        <li>30% inicial: $ CLP</li>
-                        <li>20% mes 2: $ CLP</li>
-                        <li>20% mes 3: $ CLP</li>
-                        <li>20% mes 4: $ CLP</li>
-                        <li>10% mes 5: $ CLP</li>
+                        <li>30% inicial: 12,000,000 CLP</li>
+                        <li>20% mes 2: 8,000,000 CLP</li>
+                        <li>20% mes 3: 8,000,000 CLP</li>
+                        <li>20% mes 4: 8,000,000 CLP</li>
+                        <li>10% mes 5: 4,000,000 CLP</li>
                     </ul>
                     <small>Facilita la distribución del presupuesto</small>
                 </div>
@@ -781,9 +781,9 @@
                 <div class="feature-box">
                     <h3>Opción 3: Por Portal</h3>
                     <ul>
-                        <li>Portal Oficina: $ CLP</li>
-                        <li>Portal Técnico: $ CLP</li>
-                        <li>Portal Cliente: $ CLP</li>
+                        <li>Portal Oficina: 20,000,000 CLP</li>
+                        <li>Portal Técnico: 10,000,000 CLP</li>
+                        <li>Portal Cliente: 10,000,000 CLP</li>
                     </ul>
                     <small>Permite validar por etapas</small>
                 </div>
@@ -934,7 +934,7 @@
 
     <div class="footer">
         <h3>Información de Contacto</h3>
-        <p>+56 953550896 | sepujimenez.dev@gmail.com</p>
+        <p>+569 53550896 | sepujimenez.dev@gmail.com</p>
         <p style="margin-top: 20px;">Propuesta elaborada especialmente para EcoSan Plagas</p>
     </div>
 </body>
