--- a/index.html
+++ b/index.html
@@ -438,6 +438,39 @@
                 </div>
             </div>
         </div>
+        <div class="section">
+            <h2>Comparativa de Mercado</h2>
+            <div class="grid">
+                <div class="feature-box">
+                    <h3>Empresas Grandes</h3>
+                    <ul>
+                        <li>Rango: 90-120 millones</li>
+                        <li>Tiempo: 8-12 meses</li>
+                        <li>Sin código fuente</li>
+                        <li>Personalización limitada</li>
+                    </ul>
+                </div>
+                <div class="feature-box">
+                    <h3>Empresas Medianas</h3>
+                    <ul>
+                        <li>Rango: 50-90 millones</li>
+                        <li>Tiempo: 6-8 meses</li>
+                        <li>Código fuente con costo adicional</li>
+                        <li>Personalización básica</li>
+                    </ul>
+                </div>
+                <div class="feature-box">
+                    <h3>Nuestra Solución</h3>
+                    <ul>
+                        <li>Inversión: 40 millones</li>
+                        <li>Tiempo: 5 meses</li>
+                        <li>Código fuente incluido</li>
+                        <li>100% personalizado</li>
+                    </ul>
+                    <p class="price">Ahorro desde 10-80 millones</p>
+                </div>
+            </div>
+        </div>
         
         <div class="section">
             <h2>Comparativa de Sistemas</h2>
