--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         <li>Verificación de servicios</li>
                         <li>Control financiero exclusivo</li>
                     </ul>
-                    <p class="price">Valor: 20,000,000 CLP</p>
+                    <p class="price">Valor: 17,500,000 CLP</p>
                 </div>
 
                 <div class="feature-box">
@@ -422,7 +422,7 @@
                         <li>Formularios digitales</li>
                         <li>Registro de servicios</li>
                     </ul>
-                    <p class="price">Valor: 10,000,000 CLP</p>
+                    <p class="price">Valor: 8,750,000 CLP</p>
                 </div>
 
                 <div class="feature-box">
@@ -434,7 +434,7 @@
                         <li>Reportes y estadísticas</li>
                         <li>Gestión de certificados</li>
                     </ul>
-                    <p class="price">Valor: 10,000,000 CLP</p>
+                    <p class="price">Valor: 8,750,000 CLP</p>
                 </div>
             </div>
         </div>
@@ -746,19 +746,19 @@
                     <tr>
                         <td>Portal Oficina</td>
                         <td>560</td>
-                        <td>20,000,000</td>
+                        <td>17,500,000</td>
                         <td>Sistema completo de gestión administrativa</td>
                     </tr>
                     <tr>
                         <td>Portal Técnico</td>
                         <td>280</td>
-                        <td>10,000,000</td>
+                        <td>8,750,000</td>
                         <td>Sistema operativo para técnicos</td>
                     </tr>
                     <tr>
                         <td>Portal Cliente</td>
                         <td>280</td>
-                        <td>10,000,000</td>
+                        <td>8,750,000</td>
                         <td>Plataforma de autogestión para clientes</td>
                     </tr>
                     <tr>
@@ -776,13 +776,13 @@
                     <tr>
                         <td>Migración de Datos Manual</td>
                         <td><span class="precio-tachado">60</span></td>
-                        <td><span class="precio-tachado">2,100,000</span> <span class="precio-nuevo">0</span></td>
+                        <td><span class="precio-tachado">2,100,000</span></td>
                         <td>Migración manual de datos iniciales (clientes, inventario, contratos)</td>
                     </tr>
                     <tr>
                         <th>Total Final</th>
                         <th>1,120</th>
-                        <th>40,000,000</th>
+                        <th>35,000,000</th>
                         <th>Sistema completo con servicios bonificados</th>
                     </tr>
                 </table>
@@ -793,8 +793,8 @@
                 <div class="feature-box">
                     <h3>Opción 1: Dos Pagos</h3>
                     <ul>
-                        <li>50% inicial: 20,000,000 CLP</li>
-                        <li>50% a la entrega: 20,000,000 CLP</li>
+                        <li>50% inicial: 17,500,000 CLP</li>
+                        <li>50% a la entrega: 17,500,000 CLP</li>
                     </ul>
                     <small>Ideal para pagos simplificados</small>
                 </div>
@@ -802,11 +802,11 @@
                 <div class="feature-box">
                     <h3>Opción 2: Pagos Mensuales</h3>
                     <ul>
-                        <li>30% inicial: 12,000,000 CLP</li>
-                        <li>20% mes 2: 8,000,000 CLP</li>
-                        <li>20% mes 3: 8,000,000 CLP</li>
-                        <li>20% mes 4: 8,000,000 CLP</li>
-                        <li>10% mes 5: 4,000,000 CLP</li>
+                        <li>30% inicial: 10,500,000 CLP</li>
+                        <li>20% mes 2: 7,000,000 CLP</li>
+                        <li>20% mes 3: 7,000,000 CLP</li>
+                        <li>20% mes 4: 7,000,000 CLP</li>
+                        <li>10% mes 5: 3,500,000 CLP</li>
                     </ul>
                     <small>Facilita la distribución del presupuesto</small>
                 </div>
@@ -814,9 +814,9 @@
                 <div class="feature-box">
                     <h3>Opción 3: Por Portal</h3>
                     <ul>
-                        <li>Portal Oficina: 20,000,000 CLP</li>
-                        <li>Portal Técnico: 10,000,000 CLP</li>
-                        <li>Portal Cliente: 10,000,000 CLP</li>
+                        <li>Portal Oficina: 17,500,000 CLP</li>
+                        <li>Portal Técnico: 8,750,000 CLP</li>
+                        <li>Portal Cliente: 8,750,000 CLP</li>
                     </ul>
                     <small>Permite validar por etapas</small>
                 </div>
@@ -967,7 +967,7 @@
 
     <div class="footer">
         <h3>Información de Contacto</h3>
-        <p>+569 53550896 | sepujimenez.dev@gmail.com</p>
+        <p>+56 953550896 | sepujimenez.dev@gmail.com</p>
         <p style="margin-top: 20px;">Propuesta elaborada especialmente para EcoSan Plagas</p>
     </div>
 </body>
