--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
         
         :root {
-            --primary-color: #2E7D32;
-            --primary-dark: #1B5E20;
-            --secondary-color: #4CAF50;
-            --text-color: #263238;
-            --light-gray: #F5F7F5;
+            --primary-color: #2C3E50;
+            --primary-dark: #1a252f;
+            --secondary-color: #3498DB;
+            --text-color: #2C3E50;
+            --light-gray: #F8F9FA;
             --border-color: #e2e8f0;
-            --success-color: #22c55e;
-            --warning-color: #eab308;
+            --success-color: #27AE60;
+            --warning-color: #F1C40F;
             --shadow-sm: 0 1px 2px rgba(0,0,0,0.05);
             --shadow-md: 0 4px 6px -1px rgba(0,0,0,0.1);
             --shadow-lg: 0 10px 15px -3px rgba(0,0,0,0.1);
@@ -28,8 +28,8 @@
             font-family: 'Poppins', sans-serif;
             line-height: 1.7;
             color: var(--text-color);
-            background-color: var(--secondary-color);
-            font-size: 13px;
+            background-color: var(--light-gray);
+            font-size: 14px;
         }
 
         .cover {
@@ -82,12 +82,11 @@
         }
 
         .section {
-            margin-bottom: 60px;
-            padding: 20px; /* Antes: 30px */
             background: white;
             border-radius: 16px;
+            padding: 30px;
+            margin-bottom: 30px;
             box-shadow: var(--shadow-md);
-            transition: all 0.3s ease;
         }
 
         .section:hover {
@@ -97,10 +96,10 @@
 
         .section h2 {
             color: var(--primary-color);
-            font-size: 1.8em; /* Antes: 2em */
-            margin-bottom: 40px;
-            position: relative;
+            font-size: 1.8em;
+            margin-bottom: 30px;
             padding-bottom: 15px;
+            border-bottom: 3px solid var(--secondary-color);
         }
 
         .section h2::after {
@@ -302,7 +301,6 @@
             padding: 60px 30px;
             text-align: center;
             margin-top: 80px;
-            clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
         }
 
         .footer h3 {
