--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div class="message-container">
         <h1>Propuesta no disponible por el momento</h1>
-        <p>Gracias por su interés. Por favor, contacte nuevamente más tarde.</p>
+        <p>Gracias por su interés.</p>
     </div>
 </body>
 </html>
