--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema Personalizado EcoSanPlagas - Propuesta</title>
+    <title>EcoSanPlagas - Propuesta</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-8">
-                    <h1 class="display-4 fw-bold mb-4">Sistema Integral Control de Plagas</h1>
+                    <h1 class="display-4 fw-bold mb-4">Propuesta EcoSanPlagas</h1>
                     <p class="lead mb-4">Sistema Integral de Gestión para Control de Plagas</p>
                     <div class="row g-4 mt-3">
                         <div class="col-md-4">
