--- a/index.html
+++ b/index.html
@@ -143,6 +143,53 @@
         </div>
     </div>
 
+    <!-- Agrego sección "Costos Actuales" antes de los módulos -->
+    <div class="container my-5">
+       <h2 class="mb-4">Costos Actuales Sin Sistema</h2>
+       <div class="row g-4">
+           <div class="col-md-3">
+               <div class="card bg-danger text-white h-100">
+                   <div class="card-body">
+                       <i class="fas fa-clock fa-2x mb-3"></i>
+                       <h3>48 horas</h3>
+                       <p>Mensuales perdidas en tareas administrativas</p>
+                       <h4 class="mt-2">$480,000</h4>
+                   </div>
+               </div>
+           </div>
+           <div class="col-md-3">
+               <div class="card bg-danger text-white h-100">
+                   <div class="card-body">
+                       <i class="fas fa-exclamation-triangle fa-2x mb-3"></i>
+                       <h3>15%</h3>
+                       <p>Pérdida de inventario por mal control</p>
+                       <h4 class="mt-2">$300,000</h4>
+                   </div>
+               </div>
+           </div>
+           <div class="col-md-3">
+               <div class="card bg-danger text-white h-100">
+                   <div class="card-body">
+                       <i class="fas fa-users-slash fa-2x mb-3"></i>
+                       <h3>5%</h3>
+                       <p>Clientes perdidos por errores</p>
+                       <h4 class="mt-2">$500,000</h4>
+                   </div>
+               </div>
+           </div>
+           <div class="col-md-3">
+               <div class="card bg-danger text-white h-100">
+                   <div class="card-body">
+                       <i class="fas fa-file-invoice fa-2x mb-3"></i>
+                       <h3>100%</h3>
+                       <p>Riesgo en auditorías</p>
+                       <h4 class="mt-2">$1,000,000</h4>
+                   </div>
+               </div>
+           </div>
+       </div>
+    </div>
+
     <!-- Módulos -->
     <div class="container my-5">
         <h2 class="mb-4">Desglose del Proyecto</h2>
@@ -272,37 +319,71 @@
                     </div>
                 </div>
             </div>
-            <!-- ... -->
-
         </div>
     </div>
 
-    <!-- Beneficios -->
+    <!-- Modifico sección Beneficios -->
     <div class="container my-5">
-        <h2 class="mb-4">Beneficios Clave</h2>
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="benefit-card p-4">
-                    <i class="fas fa-rocket fa-2x text-primary mb-3"></i>
-                    <h5>Eficiencia Operativa</h5>
-                    <p class="mb-0">Reduce tiempos administrativos en un 60%</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="benefit-card p-4">
-                    <i class="fas fa-chart-line fa-2x text-primary mb-3"></i>
-                    <h5>Control Total</h5>
-                    <p class="mb-0">Seguimiento en tiempo real de servicios e inventario</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="benefit-card p-4">
-                    <i class="fas fa-shield-alt fa-2x text-primary mb-3"></i>
-                    <h5>Cumplimiento</h5>
-                    <p class="mb-0">Certificados y documentación automatizada</p>
-                </div>
-            </div>
-        </div>
+       <h2 class="mb-4">Retorno de Inversión</h2>
+       <div class="row g-4">
+           <div class="col-md-4">
+               <div class="benefit-card p-4">
+                   <i class="fas fa-rocket fa-2x text-primary mb-3"></i>
+                   <h5>Ahorro Mensual</h5>
+                   <h3 class="text-success">$2,280,000</h3>
+                   <p>Reducción de costos operativos</p>
+               </div>
+           </div>
+           <div class="col-md-4">
+               <div class="benefit-card p-4">
+                   <i class="fas fa-chart-line fa-2x text-primary mb-3"></i>
+                   <h5>Aumento Productividad</h5>
+                   <h3 class="text-success">40%</h3>
+                   <p>Mayor eficiencia del personal</p>
+               </div>
+           </div>
+           <div class="col-md-4">
+               <div class="benefit-card p-4">
+                   <i class="fas fa-shield-alt fa-2x text-primary mb-3"></i>
+                   <h5>Satisfacción Cliente</h5>
+                   <h3 class="text-success">95%</h3>
+                   <p>Mejora en servicio al cliente</p>
+               </div>
+           </div>
+       </div>
+    </div>
+    <!-- Agrego sección de Garantías -->
+    <div class="container my-5">
+       <h2 class="mb-4">Garantías</h2>
+       <div class="row g-4">
+           <div class="col-md-4">
+               <div class="card h-100">
+                   <div class="card-body">
+                       <i class="fas fa-medal fa-2x text-primary mb-3"></i>
+                       <h5>3 Meses de Soporte</h5>
+                       <p>Soporte técnico dedicado incluido</p>
+                   </div>
+               </div>
+           </div>
+           <div class="col-md-4">
+               <div class="card h-100">
+                   <div class="card-body">
+                       <i class="fas fa-graduation-cap fa-2x text-primary mb-3"></i>
+                       <h5>Capacitación Completa</h5>
+                       <p>Entrenamiento para todo su personal</p>
+                   </div>
+               </div>
+           </div>
+           <div class="col-md-4">
+               <div class="card h-100">
+                   <div class="card-body">
+                       <i class="fas fa-code fa-2x text-primary mb-3"></i>
+                       <h5>Código Fuente</h5>
+                       <p>Propiedad total del sistema</p>
+                   </div>
+               </div>
+           </div>
+       </div>
     </div>
 
     <!-- Planes de Pago -->
