--- a/index.html
+++ b/index.html
@@ -3,71 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoSanPlagas - Propuesta</title>
+    <title>Propuesta Sistema de Control de Plagas</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <style>
         :root {
-            --primary: #0f172a;
-            --primary-dark: #1e293b;
-            --accent: #3b82f6;
-            --success: #10b981;
-            --text-light: #94a3b8;
-            --gradient: linear-gradient(135deg, #0ea5e9 0%, #3b82f6 100%);
+            --primary: #1a1a1a;
+            --secondary: #333333;
+            --accent: #0066cc;
+            --light: #f8f9fa;
         }
 
         body {
             font-family: 'Inter', sans-serif;
-            line-height: 1.6;
             color: var(--primary);
-            background-color: #f8fafc;
+            background-color: var(--light);
         }
 
-        .bg-gradient-premium {
-            background: var(--gradient);
-            position: relative;
-            overflow: hidden;
-        }
-
-        .hero-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M54.627 0l.83.828-1.415 1.415L51.8 0h2.827zM5.373 0l-.83.828L5.96 2.243 8.2 0H5.374zM48.97 0l3.657 3.657-1.414 1.414L46.143 0h2.828zM11.03 0L7.372 3.657 8.787 5.07 13.857 0H11.03zm32.284 0L49.8 6.485 48.384 7.9l-7.9-7.9h2.83zM16.686 0L10.2 6.485 11.616 7.9l7.9-7.9h-2.83zM22.343 0L13.857 8.485 15.272 9.9l7.9-7.9h-.83zm5.657 0L19.514 8.485 20.93 9.9l8.485-8.485h-1.415zM32.372 0L26.8 5.657 28.214 7.07 34.8 0h-2.427zm5.657 0l-6.485 6.485L33.03 7.9l6.485-6.485h-1.415zm5.657 0l-7.071 7.071 1.415 1.415L45.8 0h-2.114zM50.542 0l-8.485 8.485 1.414 1.414L52.8 0h-2.257zM44.886 0L35.3 9.586l1.414 1.414L47.8 0h-2.914zm5.656 0L39.543 10.9l1.414 1.414L53.8 0h-3.258zM48.457 0L37.557 10.9l1.414 1.414L54.8 0h-6.343zm2.828 0L38.972 12.314l1.414 1.414L55.8 0h-4.515zm-39.8 0l13.514 13.514-1.414 1.414L5.657 0H11.4zm-3.272 0L24.857 13.514l-1.414 1.414L3.543 0h7.6zm-3.271 0l20.457 20.457-1.414 1.414L0 2.544V0h4.857zM0 5.373L28.457 33.83l-1.414 1.414L0 8.2V5.374zm0 5.656l26.457 26.457-1.414 1.414L0 13.857v-2.828zm0 5.657l24.457 24.457-1.414 1.414L0 19.514v-2.828zm0 5.657l22.457 22.457-1.414 1.414L0 25.17v-2.828zm0 5.657l20.457 20.457-1.414 1.414L0 30.828v-2.828zm0 5.657l18.457 18.457-1.414 1.414L0 36.485v-2.828zm0 5.657l16.457 16.457-1.414 1.414L0 42.142v-2.828zm0 5.657l14.457 14.457-1.414 1.414L0 47.8v-2.828zm0 5.657l12.457 12.457-1.414 1.414L0 53.456v-2.828zm0 5.657l10.457 10.457-1.414 1.414L0 59.113v-2.828zm0 5.657l8.457 8.457-1.414 1.414L0 64.77v-2.828zm0 5.657l6.457 6.457-1.414 1.414L0 70.427v-2.828zm0 5.657l4.457 4.457-1.414 1.414L0 76.084v-2.828zm0 5.657l2.457 2.457-1.414 1.414L0 81.741v-2.828z' fill='%23ffffff' fill-opacity='0.1' fill-rule='evenodd'/%3E%3C/svg%3E");
+        .hero-section {
+            background: linear-gradient(45deg, #1a1a1a, #333333);
+            padding: 120px 0;
         }
 
         .card {
             border: none;
-            background: #ffffff;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-            transition: all 0.3s ease;
-            border-radius: 16px;
-            overflow: hidden;
+            border-radius: 12px;
+            box-shadow: 0 2px 15px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease;
         }
 
-        .stat-card {
-            background: rgba(255,255,255,0.15);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255,255,255,0.2);
-            border-radius: 16px;
+        .module-card {
+            border-left: 3px solid var(--accent);
+        }
+
+        .icon-box {
+            width: 48px;
+            height: 48px;
+            background: rgba(0,102,204,0.1);
+            border-radius: 12px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--accent);
+            margin-bottom: 1rem;
+        }
+
+        .timeline-item {
+            position: relative;
+            padding-left: 2rem;
+            margin-bottom: 2rem;
+        }
+
+        .timeline-item::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 8px;
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background: var(--accent);
         }
     </style>
 </head>
-<body class="bg-light">
+<body>
     <!-- Hero Section -->
-    <div class="bg-gradient-premium text-white py-5 position-relative">
-        <div class="hero-overlay"></div>
-        <div class="container position-relative">
-            <div class="row align-items-center">
-                <div class="col-lg-8 mx-auto text-center">
+    <div class="hero-section text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 mx-auto text-center">
                     <h1 class="display-4 fw-bold mb-4">Sistema Integral de Control de Plagas</h1>
-                    <p class="lead mb-4">Transforme su empresa con una solución digital completa</p>
-                    <div class="bg-white bg-opacity-10 p-4 rounded-4 backdrop-blur mb-4">
-                        <h2 class="h1 mb-3">$7,000,000</h2>
-                        <p class="lead mb-0">Inversión Total</p>
-                    </div>
+                    <p class="lead mb-0">Solución empresarial para gestión y control de operaciones</p>
                 </div>
             </div>
         </div>
@@ -75,47 +81,78 @@
 
     <!-- Módulos -->
     <div class="container my-5">
-        <h2 class="mb-4">Desglose del Proyecto</h2>
         <div class="row g-4">
-            <!-- Configuración Inicial -->
-            <div class="col-lg-6">
-                <div class="card h-100 module-card">
+            <div class="col-12 mb-4">
+                <h2 class="h3">Componentes del Sistema</h2>
+            </div>
+            
+            <!-- Módulos individuales -->
+            <div class="col-md-6">
+                <div class="card module-card h-100">
                     <div class="card-body">
-                        <div class="feature-icon">
-                            <i class="fas fa-cogs fa-lg"></i>
+                        <div class="icon-box">
+                            <i class="fas fa-cogs"></i>
                         </div>
-                        <h4 class="text-primary">Configuración Inicial</h4>
-                        <div class="d-flex justify-content-between align-items-center mb-3">
-                            <span class="h5 mb-0">$1,000,000</span>
-                            <span class="badge bg-primary">40 horas</span>
-                        </div>
+                        <h4>Portal Administración</h4>
                         <ul class="list-unstyled">
-                            <li><i class="fas fa-check text-success me-2"></i>Setup proyecto</li>
-                            <li><i class="fas fa-check text-success me-2"></i>Configuración Supabase</li>
-                            <li><i class="fas fa-check text-success me-2"></i>CI/CD</li>
+                            <li class="mb-2">• Control centralizado</li>
+                            <li class="mb-2">• Gestión de servicios</li>
+                            <li class="mb-2">• Administración de inventario</li>
+                            <li>• Reportes automatizados</li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-            <!-- Portal Oficina -->
-            <div class="col-lg-6">
-                <div class="card h-100 module-card">
-                    <div class="pricing-badge">Core</div>
+            <!-- Portal Técnico -->
+            <div class="col-md-6">
+                <div class="card module-card h-100">
                     <div class="card-body">
-                        <div class="feature-icon">
-                            <i class="fas fa-building fa-lg"></i>
+                        <div class="icon-box">
+                            <i class="fas fa-mobile-alt"></i>
                         </div>
-                        <h4 class="text-primary">Portal Oficina</h4>
-                        <div class="d-flex justify-content-between align-items-center mb-3">
-                            <span class="h5 mb-0">$2,500,000</span>
-                            <span class="badge bg-primary">100 horas</span>
-                        </div>
+                        <h4>Portal Técnico</h4>
                         <ul class="list-unstyled">
-                            <li><i class="fas fa-check text-success me-2"></i>Auth system</li>
-                            <li><i class="fas fa-check text-success me-2"></i>Gestión servicios</li>
-                            <li><i class="fas fa-check text-success me-2"></i>Calendario drag&drop</li>
-                            <li><i class="fas fa-check text-success me-2"></i>Control inventario</li>
+                            <li class="mb-2">• Aplicación móvil</li>
+                            <li class="mb-2">• Trabajo offline</li>
+                            <li class="mb-2">• Control de inventario personal</li>
+                            <li>• Registro de servicios</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Certificados -->
+            <div class="col-md-6">
+                <div class="card module-card h-100">
+                    <div class="card-body">
+                        <div class="icon-box">
+                            <i class="fas fa-certificate"></i>
+                        </div>
+                        <h4>Gestión Documental</h4>
+                        <ul class="list-unstyled">
+                            <li class="mb-2">• Certificados automáticos</li>
+                            <li class="mb-2">• Control de correlativos</li>
+                            <li class="mb-2">• Envío automático</li>
+                            <li>• Histórico digital</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Reportes -->
+            <div class="col-md-6">
+                <div class="card module-card h-100">
+                    <div class="card-body">
+                        <div class="icon-box">
+                            <i class="fas fa-chart-bar"></i>
+                        </div>
+                        <h4>Analytics</h4>
+                        <ul class="list-unstyled">
+                            <li class="mb-2">• Dashboard personalizado</li>
+                            <li class="mb-2">• Reportes avanzados</li>
+                            <li class="mb-2">• Análisis de tendencias</li>
+                            <li>• Exportación de datos</li>
                         </ul>
                     </div>
                 </div>
@@ -123,31 +160,83 @@
         </div>
     </div>
 
-    <!-- Beneficios -->
+    <!-- Inversión -->
+    <div class="container my-5 py-5 bg-white">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-center">
+                <h2 class="h3 mb-5">Inversión y Financiamiento</h2>
+                <div class="card border-0 bg-light p-4 mb-5">
+                    <h3 class="display-4 mb-0">$7,000,000</h3>
+                    <p class="text-muted">Inversión total</p>
+                </div>
+            </div>
+        </div>
+        <div class="row g-4 justify-content-center">
+            <div class="col-md-3">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <h5>3 Cuotas</h5>
+                        <p class="display-6 mb-0">$2,333,333</p>
+                        <p class="text-muted">mensual</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <h5>6 Cuotas</h5>
+                        <p class="display-6 mb-0">$1,166,666</p>
+                        <p class="text-muted">mensual</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card h-100">
+                    <div class="card-body text-center">
+                        <h5>12 Cuotas</h5>
+                        <p class="display-6 mb-0">$583,333</p>
+                        <p class="text-muted">mensual</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Timeline -->
     <div class="container my-5">
-        <h2 class="mb-4">Retorno de Inversión</h2>
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="benefit-card p-4">
-                    <i class="fas fa-rocket fa-2x text-primary mb-3"></i>
-                    <h5>Ahorro Mensual</h5>
-                    <h3 class="text-success">$2,280,000</h3>
-                    <p>Reducción de costos operativos</p>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <h2 class="h3 mb-4">Proceso de Implementación</h2>
+                <div class="timeline">
+                    <div class="timeline-item">
+                        <h5>Fase 1: Configuración</h5>
+                        <p class="text-muted">Setup inicial y desarrollo base</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h5>Fase 2: Portal Principal</h5>
+                        <p class="text-muted">Desarrollo del sistema central</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h5>Fase 3: App Móvil</h5>
+                        <p class="text-muted">Implementación portal técnico</p>
+                    </div>
+                    <div class="timeline-item">
+                        <h5>Fase 4: Finalización</h5>
+                        <p class="text-muted">Testing y capacitación</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-gradient-premium text-white py-5 mt-5">
+    <!-- Footer minimalista -->
+    <footer class="bg-dark text-white py-4 mt-5">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-8">
-                    <h3>¿Listo para optimizar su empresa?</h3>
-                    <p class="lead mb-0">Contáctenos para iniciar la transformación digital de su negocio</p>
-                </div>
-                <div class="col-lg-4 text-lg-end mt-3 mt-lg-0">
+            <div class="row">
+                <div class="col-md-6">
                     <p class="mb-0">sepujimenez.dev@gmail.com</p>
+                </div>
+                <div class="col-md-6 text-md-end">
                     <p class="mb-0">+56 953550896</p>
                 </div>
             </div>
