--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h1 class="display-4 fw-bold mb-4">Sistema Integral de Control de Plagas</h1>
                     <p class="lead mb-4">Transforme su empresa con una solución digital completa</p>
                     <div class="bg-white bg-opacity-10 p-4 rounded-4 backdrop-blur mb-4">
-                        <h2 class="h1 mb-3">$7,000,000</h2>
+                        <h2 class="h1 mb-3">$</h2>
                         <p class="lead mb-0">Inversión Total</p>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
         <div class="feature-section text-center">
             <h3 class="mb-5">Inversión y Financiamiento</h3>
             <div class="card bg-gradient-premium text-white p-4 mb-5">
-                <h2 class="display-4 mb-0">$7,000,000</h2>
+                <h2 class="display-4 mb-0">$</h2>
                 <p class="lead">Inversión total</p>
             </div>
             
