--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h4>3 Cuotas</h4>
-                            <div class="display-6 my-3">$2,333,333</div>
+                            <div class="display-6 my-3">$</div>
                             <p class="text-muted">mensual</p>
                         </div>
                     </div>
@@ -250,7 +250,7 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h4>6 Cuotas</h4>
-                            <div class="display-6 my-3">$1,166,666</div>
+                            <div class="display-6 my-3">$</div>
                             <p class="text-muted">mensual</p>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h4>12 Cuotas</h4>
-                            <div class="display-6 my-3">$583,333</div>
+                            <div class="display-6 my-3">$</div>
                             <p class="text-muted">mensual</p>
                         </div>
                     </div>
